kubernetes/clusters/home/arr-stack/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr-service
  namespace: arr-stack

spec:
  selector:
    app: wizarr

  ports:
    - name: http
      protocol: TCP
      port: 5690
      targetPort: 5690

  type: ClusterIP
