kubernetes/clusters/home/arr-stack/wizarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr-ingress
  namespace: arr-stack

  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex-invite.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"

    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"

    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - plex-invite.alarlab.dev
      secretName: wizarr-tls

  rules:
    - host: plex-invite.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wizarr-service
                port:
                  number: 5690

    - host: wizarr.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wizarr-service
                port:
                  number: 5690
